examples/test/testpolicy11032.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11032
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key38: value11
      key31: value49
      key17: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value46
          key3: value18
          key40: value31
